[package]
name = "helm-api"
version = "0.1.0"
authors = ["Michael Eden <themichaeleden@gmail.com>"]

[dependencies]
rustache = "^0.1.0"
serde = "^0.8.22"
serde_derive = "^0.8.22"
serde_json = "^0.8.4"
serde_yaml = "^0.5.1"
curl = "^0.4.3"
md5 = "^0.3.2"
base64 = "^0.3.0"
mktemp = "^0.3.1"
url = "^1.3.0"
